more notes on attention

--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -491,7 +491,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fc542da07f0>"
+       "<torch._C.Generator at 0x7f4c879707f0>"
       ]
      },
      "execution_count": 18,
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1390,7 @@
        "torch.Size([4, 8, 32])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
        "(torch.Size([4, 8, 16]), torch.Size([4, 8, 16]), torch.Size([4, 8, 16]))"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
        "torch.Size([4, 8, 8])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
        "torch.Size([4, 8, 8])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,17 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out = wei @ v\n",
-    "out.shape\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1493,28 @@
        "torch.Size([4, 8, 16])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = wei @ v\n",
+    "out.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 16])"
+      ]
+     },
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1536,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1591,7 @@
        "       grad_fn=<SoftmaxBackward0>)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,9 +1625,154 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = torch.randn(B, T, head_size)\n",
+    "k = torch.randn(B, T, head_size)\n",
+    "wei = q @ k.transpose(-2, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.9006)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0037)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(15.9317)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# notice the weight variance is on the order of head_size = 16\n",
+    "wei.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now multiply by the square root of the head_size ... \n",
+    "wei = q @ k.transpose(-2, -1) * head_size**-0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.9957)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ... and now the weight variance is closer to 1\n",
+    "wei.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.1925, 0.1426, 0.2351, 0.1426, 0.2872])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5]), dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0326, 0.0030, 0.1615, 0.0030, 0.8000])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now multiply the same tensor by 8 ...\n",
+    "torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5]) * 8, dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
