starting to code training

--- a/nanoGPT.ipynb
+++ b/nanoGPT.ipynb
@@ -216,6 +216,81 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch.nn.parallel import DistributedDataParallel as DDP\n",
+    "from torch.distributed import init_process_group, destroy_process_group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -----------------------------------------------------------------------------\n",
+    "# default config values designed to train a gpt2 (124M) on OpenWebText\n",
+    "# I/O\n",
+    "out_dir = 'out'\n",
+    "eval_interval = 2000\n",
+    "log_interval = 1\n",
+    "eval_iters = 200\n",
+    "eval_only = False # if True, script exits right after the first eval\n",
+    "always_save_checkpoint = True # if True, always save a checkpoint after each eval\n",
+    "init_from = 'scratch' # 'scratch' or 'resume' or 'gpt2*'\n",
+    "# wandb logging\n",
+    "wandb_log = False # disabled by default\n",
+    "wandb_project = 'owt'\n",
+    "wandb_run_name = 'gpt2' # 'run' + str(time.time())\n",
+    "# data\n",
+    "dataset = 'openwebtext'\n",
+    "gradient_accumulation_steps = 5 * 8 # used to simulate larger batch sizes\n",
+    "batch_size = 12 # if gradient_accumulation_steps > 1, this is the micro-batch size\n",
+    "block_size = 1024\n",
+    "# model\n",
+    "n_layer = 12\n",
+    "n_head = 12\n",
+    "n_embd = 768\n",
+    "dropout = 0.0 # for pretraining 0 is good, for finetuning try 0.1+\n",
+    "bias = False # do we use bias inside LayerNorm and Linear layers?\n",
+    "# adamw optimizer\n",
+    "learning_rate = 6e-4 # max learning rate\n",
+    "max_iters = 600000 # total number of training iterations\n",
+    "weight_decay = 1e-1\n",
+    "beta1 = 0.9\n",
+    "beta2 = 0.95\n",
+    "grad_clip = 1.0 # clip gradients at this value, or disable if == 0.0\n",
+    "# learning rate decay settings\n",
+    "decay_lr = True # whether to decay the learning rate\n",
+    "warmup_iters = 2000 # how many steps to warm up for\n",
+    "lr_decay_iters = 600000 # should be ~= max_iters per Chinchilla\n",
+    "min_lr = 6e-5 # minimum learning rate, should be ~= learning_rate/10 per Chinchilla\n",
+    "# DDP settings\n",
+    "backend = 'nccl' # 'nccl', 'gloo', etc.\n",
+    "# system\n",
+    "device = 'cuda' # examples: 'cpu', 'cuda', 'cuda:0', 'cuda:1' etc., or try 'mps' on macbooks\n",
+    "# This was bfloat16, but it was blowing up ... so I set it to float16 and it works.\n",
+    "# dtype = 'float16' # 'float32', 'bfloat16', or 'float16', the latter will auto implement a GradScaler\n",
+    "dtype = 'bfloat16' if torch.cuda.is_available() and torch.cuda.is_bf16_supported() else 'float16' # 'float32', 'bfloat16', or 'float16', the latter will auto implement a GradScaler\n",
+    "compile = True # use PyTorch 2.0 to compile the model to be faster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_keys = [k for k,v in globals().items() if not k.startswith('_') and isinstance(v, (int, float, bool, str))]\n",
+    "exec(open('config/train_shakespeare_char.py').read()) # overrides from command line or config file\n",
+    "config = {k: globals()[k] for k in config_keys} # will be useful for logging"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
