--- a/nanoGPT.ipynb
+++ b/nanoGPT.ipynb
@@ -217,7 +217,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import pickle\n",
+    "from contextlib import nullcontext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,13 +292,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "config_keys = [k for k,v in globals().items() if not k.startswith('_') and isinstance(v, (int, float, bool, str))]\n",
     "exec(open('config/train_shakespeare_char.py').read()) # overrides from command line or config file\n",
     "config = {k: globals()[k] for k in config_keys} # will be useful for logging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if not ddp, we are running on a single gpu, and one process\n",
+    "master_process = True\n",
+    "seed_offset = 0\n",
+    "ddp_world_size = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tokens per iteration will be: 4,096\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokens_per_iter = gradient_accumulation_steps * ddp_world_size * batch_size * block_size\n",
+    "print(f\"tokens per iteration will be: {tokens_per_iter:,}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if master_process:\n",
+    "    os.makedirs(out_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(1337 + seed_offset)\n",
+    "torch.backends.cuda.matmul.allow_tf32 = True # allow tf32 on matmul\n",
+    "torch.backends.cudnn.allow_tf32 = True # allow tf32 on cudnn\n",
+    "device_type = 'cuda' if 'cuda' in device else 'cpu' # for later use in torch.autocast\n",
+    "# note: float16 data type will automatically use a GradScaler\n",
+    "ptdtype = {'float32': torch.float32, 'bfloat16': torch.bfloat16, 'float16': torch.float16}[dtype]\n",
+    "ctx = nullcontext() if device_type == 'cpu' else torch.amp.autocast(device_type=device_type, dtype=ptdtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'shakespeare_char'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# poor man's data loader\n",
+    "# data_dir = os.path.join('data', dataset)\n",
+    "# osCwd = os.getcwd()\n",
+    "# data_dir = os.path.join('data', dataset)\n",
+    "# train_data = np.memmap(os.path.join(data_dir, 'train.bin'), dtype=np.uint16, mode='r')\n",
+    "# val_data = np.memmap(os.path.join(data_dir, 'val.bin'), dtype=np.uint16, mode='r')\n",
+    "\n",
+    "train_data = np.memmap('train.bin', dtype=np.uint16, mode='r')\n",
+    "val_data = np.memmap('val.bin', dtype=np.uint16, mode='r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_batch(split):\n",
+    "    data = train_data if split == 'train' else val_data\n",
+    "    ix = torch.randint(len(data) - block_size, (batch_size,))\n",
+    "    x = torch.stack([torch.from_numpy((data[i:i+block_size]).astype(np.int64)) for i in ix])\n",
+    "    y = torch.stack([torch.from_numpy((data[i+1:i+1+block_size]).astype(np.int64)) for i in ix])\n",
+    "    if device_type == 'cuda':\n",
+    "        # pin arrays x,y, which allows us to move them to GPU asynchronously (non_blocking=True)\n",
+    "        x, y = x.pin_memory().to(device, non_blocking=True), y.pin_memory().to(device, non_blocking=True)\n",
+    "    else:\n",
+    "        x, y = x.to(device), y.to(device)\n",
+    "    return x, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# init these up here, can override if init_from='resume' (i.e. from a checkpoint)\n",
+    "iter_num = 0\n",
+    "best_val_loss = 1e9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found vocab_size = 65 (inside meta.pkl)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# attempt to derive vocab_size from the dataset\n",
+    "# meta_path = os.path.join(data_dir, 'meta.pkl')\n",
+    "meta_path = 'meta.pkl'\n",
+    "meta_vocab_size = None\n",
+    "if os.path.exists(meta_path):\n",
+    "    with open(meta_path, 'rb') as f:\n",
+    "        meta = pickle.load(f)\n",
+    "    meta_vocab_size = meta['vocab_size']\n",
+    "    print(f\"found vocab_size = {meta_vocab_size} (inside {meta_path})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model init\n",
+    "model_args = dict(n_layer=n_layer, n_head=n_head, n_embd=n_embd, block_size=block_size,\n",
+    "                  bias=bias, vocab_size=None, dropout=dropout) # start with model_args from command line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from model import GPTConfig, GPT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing a new model from scratch\n",
+      "number of parameters: 10.65M\n"
+     ]
+    }
+   ],
+   "source": [
+    "if init_from == 'scratch':\n",
+    "    # init a new model from scratch\n",
+    "    print(\"Initializing a new model from scratch\")\n",
+    "    # determine the vocab size we'll use for from-scratch training\n",
+    "    if meta_vocab_size is None:\n",
+    "        print(\"defaulting to vocab_size of GPT-2 to 50304 (50257 rounded up for efficiency)\")\n",
+    "    model_args['vocab_size'] = meta_vocab_size if meta_vocab_size is not None else 50304\n",
+    "    gptconf = GPTConfig(**model_args)\n",
+    "    model = GPT(gptconf)\n",
+    "elif init_from == 'resume':\n",
+    "    print(f\"Resuming training from {out_dir}\")\n",
+    "    # resume training from a checkpoint.\n",
+    "    ckpt_path = os.path.join(out_dir, 'ckpt.pt')\n",
+    "    checkpoint = torch.load(ckpt_path, map_location=device)\n",
+    "    checkpoint_model_args = checkpoint['model_args']\n",
+    "    # force these config attributes to be equal otherwise we can't even resume training\n",
+    "    # the rest of the attributes (e.g. dropout) can stay as desired from command line\n",
+    "    for k in ['n_layer', 'n_head', 'n_embd', 'block_size', 'bias', 'vocab_size']:\n",
+    "        model_args[k] = checkpoint_model_args[k]\n",
+    "    # create the model\n",
+    "    gptconf = GPTConfig(**model_args)\n",
+    "    model = GPT(gptconf)\n",
+    "    state_dict = checkpoint['model']\n",
+    "    # fix the keys of the state dictionary :(\n",
+    "    # honestly no idea how checkpoints sometimes get this prefix, have to debug more\n",
+    "    unwanted_prefix = '_orig_mod.'\n",
+    "    for k,v in list(state_dict.items()):\n",
+    "        if k.startswith(unwanted_prefix):\n",
+    "            state_dict[k[len(unwanted_prefix):]] = state_dict.pop(k)\n",
+    "    model.load_state_dict(state_dict)\n",
+    "    iter_num = checkpoint['iter_num']\n",
+    "    best_val_loss = checkpoint['best_val_loss']\n",
+    "elif init_from.startswith('gpt2'):\n",
+    "    print(f\"Initializing from OpenAI GPT-2 weights: {init_from}\")\n",
+    "    # initialize from OpenAI GPT-2 weights\n",
+    "    override_args = dict(dropout=dropout)\n",
+    "    model = GPT.from_pretrained(init_from, override_args)\n",
+    "    # read off the created config params, so we can store them into checkpoint correctly\n",
+    "    for k in ['n_layer', 'n_head', 'n_embd', 'block_size', 'bias', 'vocab_size']:\n",
+    "        model_args[k] = getattr(model.config, k)"
    ]
   },
   {
