trying to get this wandb stuff to work

--- a/adder.ipynb
+++ b/adder.ipynb
@@ -9,6 +9,17 @@
     "\n",
     "This is an attempt at implementing the adder.ipynb notebook in minGPT in nanoGPT."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
